// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> it should render a primary alert 1`] = `
<div>
  <div
    class="sc-bcXHqe jLKkvd"
  >
    this is a 
    primary
     alert 
  </div>
</div>
`;

exports[`<Alert /> it should render a secondary alert 1`] = `
<div>
  <div
    class="sc-bcXHqe bSPmec"
  >
    this is a 
    secondary
     alert 
  </div>
</div>
`;

exports[`<Alert /> should render 1`] = `
<div>
  <div
    class="sc-bcXHqe bSPmec"
  >
    this is an alert 
  </div>
</div>
`;
